Added more structure
added a button and a dropdown menu. added some dividers.

--- a/index.html
+++ b/index.html
@@ -2,12 +2,23 @@
 <html lang="en">
     <head>
         <!--This is metadata for our document-->
-        <title>Document Title</title>
+        <title>Dog Breed Selector</title>
     </head>
 
     <body>
-        <h1> This is a Level 1 heading.</h1>
-        <p> This is a paragraph with a <a href="https://google.com">link.</a></p>
-        <img src="picture.png" alt="this is a picture." width="500" height="500">
+        <h1> Dog Breed Selector</h1>
+
+        <div>
+            <p> Use this dog breed selector to view different breeds of dogs. <a href="https://google.com">link.</a></p>
+            <select>
+                <option>Test Option</option>
+            </select>
+            <button type="button">Go!</button>
+        </div>
+
+        <div>
+            <img src="picture.png" alt="Picture of a dog." width="255" height="198">
+        </div>
+
     </body>
 </html>
