--- a/contactus.html
+++ b/contactus.html
@@ -11,10 +11,10 @@
     <body>
         <div id="menu">
             <ul>
-                <li id="active"><a href="index.html">Home</a></li>
-                <li id="nav"><a href="dogbreedselector.html">Dog Breed Selector</a></li>
-                <li id="nav"><a href="aboutus.html">About us</a></li>
-                <li id="nav"><a href="contactus.html">Contact us</a></li>
+                <li id="nav"><a id="nav1" href="index.html">Home</a></li>
+                <li id="nav"><a id="nav1" href="dogbreedselector.html">Dog Breed Selector</a></li>
+                <li id="nav"><a id="nav1" href="aboutus.html">About us</a></li>
+                <li id="active"><a id="nav1" href="contactus.html">Contact us</a></li>
             </ul>
         </div><br>
 
@@ -22,9 +22,17 @@
             <div id="welcome">
                 <p id="red">This website will let you search through dog breeds and find out useful information 
                 related to each breed to help you find if this dog is the right dog for you.</p> <br>
-                <p> Use this <a href="dogbreedselector.html">Dog Breed Selector</a> to view different breeds of dogs. </p>
+                <p> Use this <a href="">Dog Breed Selector</a> to view different breeds of dogs. </p>
             </div><br>
-           
+            <div class="select-breed">
+                <select>
+                    <option>Test Option</option>
+                </select>
+                <button id="Go" type="button">Go!</button>
+                <button type="button">Demo CSS</button>
+            </div>
+        </div><br>
+
         <div>
             <img src="picture.png" alt="Picture of a dog." width="255" height="198">
         </div>
