--- a/contactus.html
+++ b/contactus.html
@@ -1,29 +1,37 @@
-<!--Document created by Karl Moody 16/02/2023-->
+<!--
+    Author: Karl Moody 
+    Date: 16/02/2023
+-->
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <!--This is metadata for our document-->
-        <title>Home</title>
+        <title>Contact</title>
         <!--Link style.css to this html document-->
         <link rel="stylesheet" href="style.css">
+        <!--Link googlefont to the  html file-->
+        <link href='https://fonts.googleapis.com/css?family=Kalam' rel='stylesheet'>
     </head>
 
     <body>
-        <div id="menu">
-            <ul>
-                <li id="nav"><a id="nav1" href="index.html">Home</a></li>
-                <li id="nav"><a id="nav1" href="dogbreedselector.html">Dog Breed Selector</a></li>
-                <li id="nav"><a id="nav1" href="aboutus.html">About us</a></li>
-                <li id="active"><a id="nav1" href="contactus.html">Contact us</a></li>
-            </ul>
-        </div><br>
-
-        <div>
-            <div id="welcome">
-                <p id="red">This website will let you search through dog breeds and find out useful information 
-                related to each breed to help you find if this dog is the right dog for you.</p> <br>
-                <p> Use this <a href="">Dog Breed Selector</a> to view different breeds of dogs. </p>
+        <div id="bg">
+            <div id="menu">
+                <h1>A mans best friend</h1>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="dogbreedselector.html">Dog Breed Selector</a></li>
+                    <li><a href="aboutus.html">About us</a></li>
+                    <li><a id="active" href="contactus.html">Contact us</a></li>
+                </ul>
             </div><br>
+
+            <div>
+                <div id="welcome">
+                    <p id="red" class="target">This website will let you search through dog breeds and find out useful information 
+                    related to each breed to help you find if this dog is the right dog for you.</p> <br>
+                    <p> Use this <a href="dogbreedselector.html">Dog Breed Selector</a> to view different breeds of dogs. </p>
+                </div><br>
+            </div>
             <div class="select-breed">
                 <select>
                     <option>Test Option</option>
@@ -31,11 +39,6 @@
                 <button id="Go" type="button">Go!</button>
                 <button type="button">Demo CSS</button>
             </div>
-        </div><br>
-
-        <div>
-            <img src="picture.png" alt="Picture of a dog." width="255" height="198">
         </div>
-
     </body>
 </html>
