--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-<!--Document created by Karl Moody 16/02/2023-->
+<!--
+    Author: Karl Moody 
+    Date: 16/02/2023
+-->
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -6,28 +9,32 @@
         <title>Home</title>
         <!--Link style.css to this html document-->
         <link rel="stylesheet" href="style.css">
+        <!--Link googlefont to the  html file-->
+        <link href='https://fonts.googleapis.com/css?family=Kalam' rel='stylesheet'>
     </head>
 
     <body>
-        <div id="menu">
-            <ul>
-                <li id="active"><a href="index.html">Home</a></li>
-                <li id="nav"><a href="dogbreedselector.html">Dog Breed Selector</a></li>
-                <li id="nav"><a href="aboutus.html">About us</a></li>
-                <li id="nav"><a href="contactus.html">Contact us</a></li>
-            </ul>
-        </div><br>
-
-        <div>
-            <div id="welcome">
-                <p id="red">This website will let you search through dog breeds and find out useful information 
-                related to each breed to help you find if this dog is the right dog for you.</p> <br>
-                <p> Use this <a href="dogbreedselector.html">Dog Breed Selector</a> to view different breeds of dogs. </p>
+        <div id="bg">
+            <h1>A mans best friend</h1>
+            <div id="menu">
+                <ul>
+                    <li><a id="active" href="index.html">Home</a></li>
+                    <li><a href="dogbreedselector.html">Dog Breed Selector</a></li>
+                    <li><a href="aboutus.html">About us</a></li>
+                    <li><a href="contactus.html">Contact us</a></li>
+                </ul>
             </div><br>
-           
-        <div>
-            <img src="picture.png" alt="Picture of a dog." width="255" height="198">
-        </div>
 
+            <div>
+                <div id="welcome">
+                    <p id="red" class="target">This website will let you search through dog breeds and find out useful information 
+                    related to each breed to help you find if this dog is the right dog for you.</p> <br>
+                    <p> Use this <a href="dogbreedselector.html">Dog Breed Selector</a> to view different breeds of dogs. </p>
+                </div><br>
+            </div>
+            <div class="panel">
+                <img src="picture2.png" alt="A cute puppy">
+            </div>
+        </div>
     </body>
 </html>
