Added a new branch = JavaScript for .js dogs API

--- a/dogbreedselector.html
+++ b/dogbreedselector.html
@@ -33,12 +33,12 @@
                 </div><br>
             </div>
             <div class="select-breed">
-                <select>
-                    <option>Test Option</option>
-                </select>
+                <select name ="breeds" id="breedList"></select>
                 <button id="Go" type="button">Go!</button>
                 <button type="button">Demo CSS</button>
             </div>
         </div>
+        <script>src="dogs.js"</script>
     </body>
 </html>
+
