--- a/dogbreedselector.html
+++ b/dogbreedselector.html
@@ -33,8 +33,8 @@
                 </div><br>
             </div>
             <div class="select-breed">
-                <select>
-                    <option>Test Option</option>
+                <select name="Dog Breeds" id="breedList">
+                    <option>Select a breed from the list...</option>
                 </select>
                 <button id="Go" type="button">Go!</button>
                 <button type="button">Demo CSS</button>
@@ -42,3 +42,4 @@
         </div>
     </body>
 </html>
+<script>src = "dogs.js" </script>
