--- a/dogbreedselector.html
+++ b/dogbreedselector.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="style.css">
         <!--Link googlefont to the  html file-->
         <link href='https://fonts.googleapis.com/css?family=Kalam' rel='stylesheet'>
+        <meta charset="UTF-8">
     </head>
 
     <body>
@@ -33,13 +34,15 @@
                 </div><br>
             </div>
             <div class="select-breed">
-                <select name="Dog Breeds" id="breedList">
-                    <option>Select a breed from the list...</option>
-                </select>
-                <button id="Go" type="button">Go!</button>
-                <button type="button">Demo CSS</button>
+                <select class = "dog-selector" id="breed-list">
+                    <option>Select a breed from the list</option>
+                </select></br>
+                <button id="Go" type="button" class="get-dog">Go!</button>
+                <div class="demo-image">
+                    
+                </div>
             </div>
         </div>
     </body>
 </html>
-<script>src = "dogs.js" </script>
+<script src = "dogs.js"></script>
